<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.filip.myapplication.fragments.ContinuousUpdateFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0"
        android:padding="0dp">
        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/locations_latitude"
                android:paddingLeft="@dimen/table_horizontal_padding"
                android:paddingRight="@dimen/table_horizontal_padding"
                android:paddingTop="@dimen/table_vertical_padding"
                android:paddingBottom="@dimen/table_vertical_padding"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/table_no_data"
                android:id="@+id/continuous_update_table_latitude"
                android:paddingLeft="@dimen/table_horizontal_padding"
                android:paddingRight="@dimen/table_horizontal_padding"
                android:paddingTop="@dimen/table_vertical_padding"
                android:paddingBottom="@dimen/table_vertical_padding"/>
        </TableRow>
        <TableRow
            android:background="@color/light_gray">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/locations_longitude"
                android:paddingLeft="@dimen/table_horizontal_padding"
                android:paddingRight="@dimen/table_horizontal_padding"
                android:paddingTop="@dimen/table_vertical_padding"
                android:paddingBottom="@dimen/table_vertical_padding"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/table_no_data"
                android:id="@+id/continuous_update_table_longitude"
                android:paddingLeft="@dimen/table_horizontal_padding"
                android:paddingRight="@dimen/table_horizontal_padding"
                android:paddingTop="@dimen/table_vertical_padding"
                android:paddingBottom="@dimen/table_vertical_padding"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/locations_accuracy"
                android:paddingLeft="@dimen/table_horizontal_padding"
                android:paddingRight="@dimen/table_horizontal_padding"
                android:paddingTop="@dimen/table_vertical_padding"
                android:paddingBottom="@dimen/table_vertical_padding"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/table_no_data"
                android:id="@+id/continuous_update_table_accuracy"
                android:paddingLeft="@dimen/table_horizontal_padding"
                android:paddingRight="@dimen/table_horizontal_padding"
                android:paddingTop="@dimen/table_vertical_padding"
                android:paddingBottom="@dimen/table_vertical_padding"/>
        </TableRow>
        <TableRow
            android:background="@color/light_gray">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/locations_time"
                android:paddingLeft="@dimen/table_horizontal_padding"
                android:paddingRight="@dimen/table_horizontal_padding"
                android:paddingTop="@dimen/table_vertical_padding"
                android:paddingBottom="@dimen/table_vertical_padding"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/table_no_data"
                android:id="@+id/continuous_update_table_time"
                android:paddingLeft="@dimen/table_horizontal_padding"
                android:paddingRight="@dimen/table_horizontal_padding"
                android:paddingTop="@dimen/table_vertical_padding"
                android:paddingBottom="@dimen/table_vertical_padding"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/locations_time_nano"
                android:paddingLeft="@dimen/table_horizontal_padding"
                android:paddingRight="@dimen/table_horizontal_padding"
                android:paddingTop="@dimen/table_vertical_padding"
                android:paddingBottom="@dimen/table_vertical_padding"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/table_no_data"
                android:id="@+id/continuous_update_table_time_nano"
                android:paddingLeft="@dimen/table_horizontal_padding"
                android:paddingRight="@dimen/table_horizontal_padding"
                android:paddingTop="@dimen/table_vertical_padding"
                android:paddingBottom="@dimen/table_vertical_padding"/>
        </TableRow>
        <TableRow
            android:background="@color/light_gray">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/locations_altitude"
                android:paddingLeft="@dimen/table_horizontal_padding"
                android:paddingRight="@dimen/table_horizontal_padding"
                android:paddingTop="@dimen/table_vertical_padding"
                android:paddingBottom="@dimen/table_vertical_padding"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/table_no_data"
                android:id="@+id/continuous_update_table_altitude"
                android:paddingLeft="@dimen/table_horizontal_padding"
                android:paddingRight="@dimen/table_horizontal_padding"
                android:paddingTop="@dimen/table_vertical_padding"
                android:paddingBottom="@dimen/table_vertical_padding"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/locations_bearing"
                android:paddingLeft="@dimen/table_horizontal_padding"
                android:paddingRight="@dimen/table_horizontal_padding"
                android:paddingTop="@dimen/table_vertical_padding"
                android:paddingBottom="@dimen/table_vertical_padding"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/table_no_data"
                android:id="@+id/continuous_update_table_bearing"
                android:paddingLeft="@dimen/table_horizontal_padding"
                android:paddingRight="@dimen/table_horizontal_padding"
                android:paddingTop="@dimen/table_vertical_padding"
                android:paddingBottom="@dimen/table_vertical_padding"/>
        </TableRow>
        <TableRow
            android:background="@color/light_gray">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/locations_speed"
                android:paddingLeft="@dimen/table_horizontal_padding"
                android:paddingRight="@dimen/table_horizontal_padding"
                android:paddingTop="@dimen/table_vertical_padding"
                android:paddingBottom="@dimen/table_vertical_padding"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/continuous_update_table_speed"
                android:text="@string/table_no_data"
                android:paddingLeft="@dimen/table_horizontal_padding"
                android:paddingRight="@dimen/table_horizontal_padding"
                android:paddingTop="@dimen/table_vertical_padding"
                android:paddingBottom="@dimen/table_vertical_padding"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/locations_number_of_sat"
                android:paddingLeft="@dimen/table_horizontal_padding"
                android:paddingRight="@dimen/table_horizontal_padding"
                android:paddingTop="@dimen/table_vertical_padding"
                android:paddingBottom="@dimen/table_vertical_padding"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/continuous_update_table_sat"
                android:text="@string/table_no_data"
                android:paddingLeft="@dimen/table_horizontal_padding"
                android:paddingRight="@dimen/table_horizontal_padding"
                android:paddingTop="@dimen/table_vertical_padding"
                android:paddingBottom="@dimen/table_vertical_padding"/>
        </TableRow>
        <TableRow
            android:background="@color/light_gray">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/locations_provider"
                android:paddingLeft="@dimen/table_horizontal_padding"
                android:paddingRight="@dimen/table_horizontal_padding"
                android:paddingTop="@dimen/table_vertical_padding"
                android:paddingBottom="@dimen/table_vertical_padding"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/continuous_update_table_provider"
                android:text="@string/table_no_data"
                android:paddingLeft="@dimen/table_horizontal_padding"
                android:paddingRight="@dimen/table_horizontal_padding"
                android:paddingTop="@dimen/table_vertical_padding"
                android:paddingBottom="@dimen/table_vertical_padding"/>
        </TableRow>
    </TableLayout>
    </ScrollView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/group_desc_default"
        android:gravity="center"
        android:id="@+id/edit_text_group_description"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonToggleUpdate"
        android:text="@string/button_start_continuous_update"
        android:onClick="toggleContinuousUpdate"/>


</LinearLayout>
